# AMDScissorBugShowcase

./: CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
glad/include/glad/: gl.h
gradle/wrapper/: gradle-wrapper.properties
shaders/: generic_texture_frag.glsl  generic_texture_vert.glsl  invert_color.glsl
src/: fbo.cpp  fbo.h  gl_executor.h  main.cpp  shader.cpp  shader.h
src/main/java/: FBOHandler.java  Main.java  Shader.java
